[package]
name = "gold_rust"
version = "0.1.0"
authors = ["Carlos Aldea <aldea.car@gmail.com>"]
edition = "2018"


[[bin]]
name = "udp_server"
path = "udp_server/main.rs"

[[bin]]
name = "udp_client"
path = "udp_client/main.rs"

[[bin]]
name = "CL_parser"
path = "command_line_parser/main.rs"

[dependencies]
